--- a/index.html
+++ b/index.html
@@ -3,15 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Unbeatable Tic Tac Toe - Hardcore Mode</title>
+  <title>Unbeatable Tic Tac Toe</title>
   <style>
     body {
       background-color: #1a1a1a;
-      color: #ff4444;
+      color: #fff;
       font-family: 'Arial', sans-serif;
       text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+    .boot-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #1a1a1a;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 24px;
+      z-index: 1000;
     }
     .logo {
+      width: 100px;
       margin: 20px auto;
     }
     .ad {
@@ -47,15 +63,38 @@
     .scoreboard {
       margin: 20px auto;
     }
+    .modal {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #333;
+      padding: 20px;
+      border-radius: 8px;
+      z-index: 1001;
+    }
+    .modal-content {
+      text-align: center;
+    }
+    .modal button {
+      margin: 10px;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
+  <!-- Boot-Up Screen -->
+  <div class="boot-screen" id="bootScreen">
+    Prepping... Please wait.
+  </div>
+
   <!-- Logo Embed -->
   <div class="logo">
-    <div style="position: relative; width: 100%; height: 0; padding-top: 100.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
-      <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https://www.canva.com/design/DAGeli_tzpA/Rl41muKHBPWhrNYszSuhyw/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
-    </div>
-    <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGeli_tzpA&#x2F;Rl41muKHBPWhrNYszSuhyw&#x2F;view?utm_content=DAGeli_tzpA&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Black White Minimalist Initials Monogram Jewelry Logo</a> by Vuyani Siyanda Vilakazi
+    <img src="logo.png" alt="Game Logo" style="width: 100%;">
   </div>
 
   <!-- Ad Space -->
@@ -83,6 +122,14 @@
 
   <!-- Ad Space -->
   <div class="ad">Ad Space</div>
+
+  <!-- Custom Modal -->
+  <div class="modal" id="customModal">
+    <div class="modal-content">
+      <p id="modalMessage"></p>
+      <button id="modalButton">OK</button>
+    </div>
+  </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
   <script src="script.js"></script>
