--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       z-index: 1000;
     }
     .logo {
-      width: 100px;
+      width: 150px;
       margin: 20px auto;
     }
     .ad {
@@ -77,6 +77,13 @@
     .modal-content {
       text-align: center;
     }
+    .modal input {
+      margin: 10px 0;
+      padding: 10px;
+      width: 80%;
+      border: none;
+      border-radius: 5px;
+    }
     .modal button {
       margin: 10px;
       padding: 10px 20px;
@@ -94,7 +101,9 @@
 
   <!-- Logo Embed -->
   <div class="logo">
-    <img src="logo.png" alt="Game Logo" style="width: 100%;">
+    <div style="position: relative; width: 100%; height: 0; padding-top: 100.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+      <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https://www.canva.com/design/DAGeli_tzpA/Rl41muKHBPWhrNYszSuhyw/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+    </div>
   </div>
 
   <!-- Ad Space -->
@@ -127,6 +136,7 @@
   <div class="modal" id="customModal">
     <div class="modal-content">
       <p id="modalMessage"></p>
+      <input type="text" id="modalInput" placeholder="Enter your name">
       <button id="modalButton">OK</button>
     </div>
   </div>
