--- a/share.html
+++ b/share.html
@@ -45,6 +45,7 @@
       <p><strong>Losses:</strong> <span id="losses"></span></p>
       <p><strong>Time Played:</strong> <span id="time"></span></p>
       <p><strong>Mode:</strong> <span id="mode"></span></p>
+      <p><strong>Date & Time:</strong> <span id="timeDate"></span></p>
     </div>
     <button class="share-button" id="shareButton">Share Your Results</button>
   </div>
