--- a/index.html
+++ b/index.html
@@ -145,3 +145,66 @@
   <script src="script.js"></script>
 </body>
 </html>
+<!-- Embedding and Sharing Section -->
+<div class="embed-section">
+  <h2>Embed or Share This Game</h2>
+  <p>Embed this game on your website or share it with friends:</p>
+  
+  <!-- Embedding Code -->
+  <div class="embed-code">
+    <h3>Embedding Code</h3>
+    <textarea readonly rows="4" cols="50">
+<iframe
+  src="https://vcloud24.github.io/tic-tac-toe"
+  width="600"
+  height="700"
+  style="border: 2px solid #333; border-radius: 8px;"
+  allowfullscreen
+>
+</iframe>
+    </textarea>
+  </div>
+
+  <!-- Shareable Links -->
+  <div class="share-links">
+    <h3>Shareable Links</h3>
+    <p>
+      <a href="https://wa.me/?text=Play%20this%20awesome%20Tic%20Tac%20Toe%20game%20and%20try%20to%20beat%20the%20bot!%20%F0%9F%8E%AE%20https://vcloud24.github.io/tic-tac-toe" target="_blank">
+        Play on WhatsApp
+      </a>
+    </p>
+    <p>
+      <a href="https://www.facebook.com/sharer/sharer.php?u=https://vcloud24.github.io/tic-tac-toe" target="_blank">
+        Share on Facebook
+      </a>
+    </p>
+  </div>
+</div>
+
+<style>
+  .embed-section {
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #333;
+    border-radius: 8px;
+    max-width: 600px;
+    text-align: center;
+  }
+  .embed-code textarea {
+    width: 100%;
+    padding: 10px;
+    font-family: monospace;
+    background-color: #444;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    resize: none;
+  }
+  .share-links a {
+    color: #007bff;
+    text-decoration: none;
+  }
+  .share-links a:hover {
+    text-decoration: underline;
+  }
+</style>
