--- a/share.html
+++ b/share.html
@@ -16,6 +16,10 @@
       max-width: 600px;
       margin: 0 auto;
     }
+    .logo {
+      width: 150px;
+      margin: 20px auto;
+    }
     .player-info {
       background-color: #333;
       padding: 20px;
@@ -30,13 +34,43 @@
       border-radius: 5px;
       cursor: pointer;
       font-size: 16px;
+      margin: 5px;
     }
     .share-button:hover {
       background-color: #0056b3;
     }
+    .modal {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #333;
+      padding: 20px;
+      border-radius: 8px;
+      z-index: 1001;
+    }
+    .modal-content {
+      text-align: center;
+    }
+    .modal button {
+      margin: 10px;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
+  <!-- Logo Embed -->
+  <div class="logo">
+    <div style="position: relative; width: 100%; height: 0; padding-top: 100.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+      <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https://www.canva.com/design/DAGeli_tzpA/Rl41muKHBPWhrNYszSuhyw/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+    </div>
+  </div>
+
+  <!-- Player Info -->
   <div class="container">
     <h1>Your Game Results</h1>
     <div class="player-info">
@@ -44,10 +78,24 @@
       <p><strong>Wins:</strong> <span id="wins"></span></p>
       <p><strong>Losses:</strong> <span id="losses"></span></p>
       <p><strong>Time Played:</strong> <span id="time"></span></p>
-      <p><strong>Mode:</strong> <span id="mode"></span></p>
       <p><strong>Date & Time:</strong> <span id="timeDate"></span></p>
     </div>
-    <button class="share-button" id="shareButton">Share Your Results</button>
+
+    <!-- Share Buttons -->
+    <button class="share-button" id="copyLinkButton">Copy Shareable Link</button>
+    <button class="share-button" id="facebookButton">Share on Facebook</button>
+    <button class="share-button" id="whatsappButton">Share on WhatsApp</button>
+    <button class="share-button" id="twitterButton">Share on Twitter</button>
+    <button class="share-button" id="linkedinButton">Share on LinkedIn</button>
+    <button class="share-button" id="feedbackButton">Send Feedback</button>
+  </div>
+
+  <!-- Custom Modal -->
+  <div class="modal" id="customModal">
+    <div class="modal-content">
+      <p id="modalMessage"></p>
+      <button id="modalButton">OK</button>
+    </div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
