--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Unbeatable Tic Tac Toe - Hardcore Mode</title>
+  <title>Unbeatable Tic Tac Toe - Hardcore Mode VCLOUD24</title>
   <style>
     body {
       background-color: #1a1a1a;
@@ -119,7 +119,7 @@
 <body>
   <!-- Boot-Up Screen -->
   <div class="boot-screen" id="bootScreen">
-    Prepping Hardcore Mode... Please wait.
+    RETURN TO WHERE YOU CAME YOU WON'T WIN ON BOT.
   </div>
 
   <!-- Logo Embed -->
@@ -159,7 +159,7 @@
   </div>
 
   <!-- Ad Space -->
-  <div class="ad">Ad Space</div>
+  <div class="ad">NO ADS</div>
 
   <!-- Custom Modal -->
   <div class="modal" id="customModal">
