--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VGames - Tic Tac Toe</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="assets/vastro.ico" type="image/x-icon">
 </head>
 <body>
   <!-- Loading Screen -->
@@ -64,9 +64,11 @@
     <h1>Game Over</h1>
     <p id="resultsText"></p>
     <button id="playAgain">Play Again</button>
-    <button id="shareScore">Share Score</button>
+    <button id="shareScore">Share Encrypted Score</button>
+    <button id="premiumGames">Play Premium Games</button>
   </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
   <script src="scripts.js"></script>
 </body>
 </html>
