--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <!-- Embedded Logo -->
     <img src="https://www.canva.com/design/DAGeli_tzpA/Rl41muKHBPWhrNYszSuhyw/watch" alt="VCLOUD24 Logo" id="logo">
 
+    <!-- Include CryptoJS for encryption -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script src="accounts.js"></script>
     <script src="game.js"></script>
 </body>
